--- a/research/stories/webs/spaceWebs.html
+++ b/research/stories/webs/spaceWebs.html
@@ -12,62 +12,77 @@
 
 <hr>
 <table border=1>
-  <tr valign="center"><td align="center"><h2>Zeroes of W22</h2></td>
+  <tr valign="center">
+    <td></td><td align="center"><h2>Zeroes of W22</h2></td>
                      <td align="center"><h2>W31^4/W40^2 &in;R<sub>>0</sub></h2> </td>
                      <td align="center"><h2>W31^2/W22/W40 &in;R<sub>>0</sub></h2> </td></tr>
   <tr>
+    <td>1</td>
     <td><img alt="web" src="1_22.gif"></td>
     <td><img alt="web" src="1_31.gif"></td>
     <td><img alt="web" src="1_IL.gif"></td>
  </tr><tr>
+    <td>2</td>
     <td><img alt="web" src="2_22.gif"></td>
     <td><img alt="web" src="2_31.gif"></td>
     <td><img alt="web" src="2_IL.gif"></td>
   </tr><tr>
+    <td>3</td>
     <td><img alt="web" src="3_22.gif"></td>
     <td><img alt="web" src="3_31.gif"></td>
     <td><img alt="web" src="3_IL.gif"></td>
   </tr><tr>
+    <td>4</td>
     <td><img alt="web" src="4_22.gif"></td>
     <td><img alt="web" src="4_31.gif"></td>
     <td><img alt="web" src="4_IL.gif"></td>
   </tr><tr>
+    <td>5</td>
     <td><img alt="web" src="5_22.gif"></td>
     <td><img alt="web" src="5_31.gif"></td> 
     <td><img alt="web" src="5_IL.gif"></td>
  </tr><tr>
+    <td>6</td>
     <td><img alt="web" src="6_22.gif"></td>
     <td><img alt="web" src="6_31.gif"></td>
     <td><img alt="web" src="6_IL.gif"></td>
-  </tr><tr>
+  </tr>7<tr>
+    <td></td>
     <td><img alt="web" src="7_22.gif"></td>
     <td><img alt="web" src="7_31.gif"></td>
     <td><img alt="web" src="7_IL.gif"></td>
   </tr><tr>
+    <td>8</td>
     <td><img alt="web" src="8_22.gif"></td>
     <td><img alt="web" src="8_31.gif"></td>
-    <td><img alt="web" src="8_IL.gif"></td>
+    <td><a href="8_IL_big.gif"><img alt="web" src="8_IL.gif"></a></td>
   </tr><tr>
+    <td>9</td>
     <td><img alt="web" src="9_22.gif"></td>
     <td><img alt="web" src="9_31.gif"></td>
     <td><img alt="web" src="9_IL.gif"></td>
   </tr><tr>
+    <td>10</td>
     <td><img alt="web" src="10_22.gif"></td>
     <td><img alt="web" src="10_31.gif"></td>
     <td><img alt="web" src="10_IL.gif"></td>
   </tr><tr>
+    <td>11</td>
     <td><img alt="web" src="11_22.gif"></td>
     <td><img alt="web" src="11_31.gif"></td>
     <td><img alt="web" src="11_IL.gif"></td>
   </tr><tr>
+    <td>12</td>
     <td><img alt="web" src="12_22.gif"></td>
     <td><img alt="web" src="12_31.gif"></td>
     <td><img alt="web" src="12_IL.gif"></td>
   </tr><tr>
+    <td>13</td>
     <td><img alt="web" src="13_22.gif"></td>
     <td><img alt="web" src="13_31.gif"></td>
     <td><img alt="web" src="13_IL.gif"></td>
   </tr><tr>
+    <td>14</td>
     <td><img alt="web" src="14_22.gif"></td>
     <td><img alt="web" src="14_31.gif"></td>
     <td><img alt="web" src="14_IL.gif"></td>
