added some M2 scripts

--- a/teaching/26.1/648.html
+++ b/teaching/26.1/648.html
@@ -8,6 +8,7 @@
 </HEAD>
 <!---------------------------------------------------------------------------->
 <!---------------------------------------------------------------------------->
+<body>
 <table>
  <tr valign=center>
   <td>
@@ -51,7 +52,9 @@
 <!---------------------------------------------------------------------------->
 I have assigned some <a href="648_HW.html">homework</a>.<br>
 
-Here are links to <a href="Scripts.html">snippets</a> of computer code used in class.
+Here are links to <a href="Scripts.html">snippets</a> of computer code used in class.<br>
+
+The beginnings of a <a href="Projects.html">page about your projects</a>.
 <!---------------------------------------------------------------------------->
 <hr>
 <!---------------------------------------------------------------------------->
