--- a/teaching/26.1/Projects.html
+++ b/teaching/26.1/Projects.html
@@ -1,57 +1,122 @@
 <!DOCTYPE HTML PUBLIC "-//IETF//DTD HTML//EN">
 <html> <head>
-<title></title>
-</head>
-
+ <TITLE>Projects for Computational Algebraic Geometry Spring 2026</TITLE>
+ <link rel="shortcut icon" href="../../images/sottile.ico"> 
+ <link href="../../images/frank.css" rel="stylesheet" type="text/css">
+ <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
+</HEAD>
+<!---------------------------------------------------------------------------->
 <body>
-<h1></h1>
+<table>
+ <tr valign=center>
+  <td>
+   <img src="../../talks/05/Shapiro.gif" alt="Failure of Shapiro Conjecture for Fl(2,3;4)"> &nbsp; &nbsp;
+  </td>
+  <td>
+    <H1>Math 648: Computational Algebraic Geometry</h1>
+  </td>
+  <td>
+   <img src="HexWeb.gif" alt="Web for a maximally inflected quintic plane curve"> &nbsp; &nbsp;
+  </td>
+ </tr>
+<table>
+<!---------------------------------------------------------------------------------------------------->
+For this class, I want students to complete a smallish project, which should involve some mathematics and some computation.
+Ideally, this is done in pairs.
 
-<!--------------------------------------------------------------------------->
-<font color=red>Thursday 26 February:</font>  Links to the demonstration files used in class:
-  <a href="Singular/pentagon.sing">pentagon.sing</a> &nbsp; &nbsp; 
-  <a href="Singular/quartic.maple">quartic.maple</a> &nbsp; &nbsp; 
-  <a href="Singular/quartic.sing">quartic.sing</a> &nbsp; &nbsp; 
-  <a href="Singular/sparse.sing">sparse.sing</a>.
-<!---------------------------------------------------------------------------->
+
+&nbsp; &nbsp; 
+Each group will make a presentation to the rest of us of their project DATE TBD.
+This will  be about 30 minutes and would include a brief discussion of the mathematics, as
+well as a brief demonstration of some software that was written for the project.
+You would also hand in a <i>short</i> typed (LaTeX) description of your work.
+It is not intended to be onerous, but to stimulate each of you to go a little further than
+the lectures.
+Different topics may have different emphasis on how much to write up and how much to code.
+<!---------------------------------------------------------------------------------------------------->
 <hr>
-<!---------------------------------------------------------------------------->
-<font size=+1><b>Homework</b></font> First homework:  Problems   from Section of notes.
-<!---------------------------------------------------------------------------->
-<hr>
-<!---------------------------------------------------------------------------->
-<font color=red>Tuesday 10 February:</font> Everyone should try three of the problems in Section 2.1, and be
-prepared to discuss them in class.<br>
-<a href="Singular/two_ideals.sing">Example</a> from the end of Section 2.1.
-<!---------------------------------------------------------------------------->
-<hr>
-<!---------------------------------------------------------------------------->
-<h3>Projects</h3>
+<!------------------------------------------------------------------------------->
+<font size=+2 color=maroon>Possible Topics:</font>
 <ul>
-  <li>April 28 : Kagan Samurkas and Ola Sobieska &nbsp; <i> Free Resolutions and Regular Sequences</i></li>
-  <li>April 28 : Kaitlyn Phillipson  &nbsp; <i>Smale's 17th problem for binomial and trinomial systems</i></li>
-  <li>April 30 : Cameron Farnsworth, Fulvio Gesmudo, and Christian Ikenmeyer &nbsp;
-                  <i>Special Concise Tensors</i></li>
-  <li>April 30 : Taylor Brysiewicz &nbsp; <i>Numerically Computing Newton Polytopes</i></li>
-<!-- Wednesday 6 April  12-2 -->
-  <li>6 May 12:00 &mdash; 14:00  Emma Owusu Kwaakwah &nbsp; <i>Viro's Construction</i></li>
-  <li>6 May 12:00 &mdash; 14:00  Yonghui Guan &nbsp; <i>Equations of polynomials of power form</i></li>
-  <li>6 May  12:00 &mdash; 14:00 Yanhe Huang  and Li Ying &nbsp; <i>The Pl&uuml;cker ideal for the Grassmannian</i></li>
-<!-- Wednesday 6 April  4-6 -->
-  <li>6 May 16:00 &mdash; 18:00 Robert Williams and Praise Adeyemo &nbsp; <i>Equations for Schubert varieties</i></li>
-  <li>6 May 16:00 &mdash; 18:00 Ata Pir and Lanyin Sun &nbsp; 
-             <i>Degenerations of toric varieties and regular subdivsions</i></li>
-  <li>6 May 16:00 &mdash; 18:00 Sean Plummer and Todd Schrader &nbsp;
-         <i>Certified path-tracking of Newton Homotopies</i></li>
-<!-- Thursday 6 April 3-5 -->
-  <li>7 May 15:00 &mdash; 17:00 Roman Kogan &nbsp; <i></i></li>
-  <li>7 May 15:00 &mdash; 17:00 Timo de Wolff &nbsp; <i>Computing Amoebas</i></li>
-  <li>7 May 15:00 &mdash; 17:00 Eric Wendel &nbsp; <i>Polynomial invariants of a flag of subspaces over a
-      simply-connected nilpotent Lie group</i></li>
+  <!------------------------------------------------------------------------------->
+  <li> Appendix D of <i>Ideals, Varieties, and Algorithms</i> by Cox, Little, and O'Shea, has some suggestions of projects, some of which may be suitible for this
+  class. 
+  </li>
+  <!------------------------------------------------------------------------------->
+  <li> SAGBI Bases.  This algorithm is for <b>S</b>ubalgebra <b>A</b>nalog of <b>G</b>r&ouml;bner <b>B</b>asis for <b>I</b>deals.
+       These are also called Canonical Subalgebra Bases.
+       One Introduction is in Chapter 11 of the very readable book <i>Gr&ouml;bner bases and convex polytopes</i> by Bernd Sturmfels.
+  </li>
+  <!------------------------------------------------------------------------------->
+  <li>
+    You could also consider other topics from  <i>Gr&ouml;bner bases and convex polytopes</i>.
+  </li>
+ <!------------------------------------------------------------------------------->
+  <li>
+    Exploring the use of resultants for implicitization of surfaces, with software.
+  </li>
+  <!------------------------------------------------------------------------------->
+  <li>
+    Study and present Newton polytopes + Mixed volume + Bernstein's theorem.
+  </li>
+  <!------------------------------------------------------------------------------->
+  <li>
+   Exploring the Grassmannian further than was done in class.  Such as the Pl&uuml;cker ideal, or Schubert varieties and Schubert calculus.
+  </li>
+  <!------------------------------------------------------------------------------->
+  <li>
+   Tropical geometry, specifically looking at what + and * are for.
+  </li>
+  <!------------------------------------------------------------------------------->
+  <li>
+    This pertains to both the previous topic and the next one.  Using the software GFan to compute Gr&ouml;bner fans and tropical varieties.
+  </li>
+  <!------------------------------------------------------------------------------->
+  <li>
+   Gr&ouml;bner fan and Newton polytopes. (This would include Universal Gr&ouml;bner bases.)
+  </li>
+  <!------------------------------------------------------------------------------->
+  <li>
+  <font color=maroon>There are many topics in numerical computation that we have not yet gotten to.</font>
+  </li>
+  <!------------------------------------------------------------------------------->
+  <li>
+  <font color=purple>There are questions in arithmetic geometry that are amenable to computataion, including Galois groups.</font>
+  </li>
+  <!------------------------------------------------------------------------------->
+
+
+
 </ul>
+
+<!---------------------------------------------------------------------------->
+<h3>Projects that were done in a previous classes</h3>
+<ul>
+  <li><i>Free Resolutions and Regular Sequences</i></li>
+  <li><i>Smale's 17th problem for binomial and trinomial systems</i></li>
+  <li><i>Special Concise Tensors</i></li>
+  <li> <i>Numerically Computing Newton Polytopes</i></li>
+  <li> <i>Viro's Construction</i></li>
+  <li> <i>Equations of polynomials of power form</i></li>
+  <li> <i>The Pl&uuml;cker ideal for the Grassmannian</i></li>
+  <li> <i>Equations for Schubert varieties</i></li>
+  <li> <i>Degenerations of toric varieties and regular subdivsions</i></li>
+  <li> <i>Certified path-tracking of Newton Homotopies</i></li>
+  <li> <i>Computing Amoebas</i></li>
+  <li> <i>Syzygies, free resolutions, and Hilbert Polynomials</i> </li>
+  <li> <i>Computation of Free Resolutions over R-modules</i> </li>
+  <li> <i>The group law on an elliptic curve</i> </li>
+  <li> <i>Toric ideals and integer programming</i> </li>
+  <li> <i>Approximation theory with B&eacute;zier curves</i> </li>
+</ul>
+
+<!---------------------------------------------------------------------------->
+<hr>
+<!---------------------------------------------------------------------------->
 
 
 
 <hr>
 <address></address>
-<!-- hhmts start -->Last modified: Fri Dec 21 17:27:50 CST 2018 <!-- hhmts end -->
+<!-- hhmts start -->Last modified: Thu Feb 19 15:27:50 CST 2026 <!-- hhmts end -->
 </body> </html>
