--- a/teaching/26.1/Scripts.html
+++ b/teaching/26.1/Scripts.html
@@ -11,6 +11,12 @@
 <hr>
 <!---------------------------------------------------------------------------->
 
+<font color=red>Thursday 19 February:</font>  
+In class, I ran the Macaulay2 script <a href="scripts/Resolutions.m2"><tt>Resolutions.m2</tt></a>.<br>
+
+<!---------------------------------------------------------------------------->
+<hr>
+<!---------------------------------------------------------------------------->
 
 <font color=red>Thursday 29 January:</font>  
 In class, I ran the Macaulay2 script <a href="scripts/small_big.m2"><tt>small_big.m2</tt></a>.
@@ -20,7 +26,6 @@ It is instructive to run both of them.
 <!---------------------------------------------------------------------------->
 <hr>
 <!---------------------------------------------------------------------------->
-
 
 <font color=red>Tuesday 20 January:</font>  
 In class, I ran the Macaulay2 script <a href="scripts/27lines.m2"><tt>27lines.m2</tt></a>.
