added two scripts to website

--- a/teaching/26.1/Scripts.html
+++ b/teaching/26.1/Scripts.html
@@ -12,7 +12,8 @@
 <!---------------------------------------------------------------------------->
 
 <font color=red>Thursday 19 February:</font>  
-In class, I ran the Macaulay2 script <a href="scripts/Resolutions.m2"><tt>Resolutions.m2</tt></a>.<br>
+In class, I ran the Macaulay2 script <a href="scripts/Resolutions.m2"><tt>Resolutions.m2</tt></a>.
+Here is a nearly identical Singular script: <a href="scripts/Resolutions.sing"><tt>Resolutions.sing</tt></a><br>
 
 <!---------------------------------------------------------------------------->
 <hr>
